# front_avaliacao

./: .gitignore  .vercelignore  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  angular.json  index.html  netlify.toml  package-lock.json  package.json  trunk.toml  vercel-build.sh  vercel.json
public/: _redirects
src/: api.rs  auth.rs  index.html  main.rs  models.rs  pdf.rs  router.rs
src/app/: app.html  app.routes.ts  app.spec.ts  app.ts
src/app/avaliacoes/avaliacao-form/: avaliacao-form.html  avaliacao-form.ts
src/app/pacientes/: paciente.service.ts
src/app/pacientes/paciente-list/: paciente-list.html  paciente-list.ts
src/components/: app.rs  auth_context.rs  avaliacao_form.rs  login.rs  lsi_chart.rs  mod.rs  numeric_input.rs  paciente_list.rs
