[package]
name = "front_avaliacao_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
gloo-net = { version = "0.6", features = ["http"] }
gloo-storage = "0.3"
gloo-utils = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Storage",
    "Url",
    "Blob",
    "BlobPropertyBag",
    "HtmlAnchorElement",
    "console",
    "Event",
    "InputEvent",
] }
log = "0.4"
wasm-logger = "0.2"
plotters = { version = "0.3", default-features = false, features = ["svg_backend"] }

[profile.release]
opt-level = "s"
lto = true